@@ -16,7 +16,8 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.context.request.WebRequest;
-import org.springframework.web.servlet.NoHandlerFoundException;
+import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
+import org.springframework.web.servlet.resource.NoResourceFoundException;
 
 import jakarta.validation.ConstraintViolationException;
 
@@ -29,12 +30,10 @@ public class GlobalExceptionHandler {
             WebRequest request) {
 
         List<Map<String, String>> errors = ex.getBindingResult().getFieldErrors().stream()
-                .map((error) -> {
-                    Map<String, String> fieldMap = new LinkedHashMap<>();
-                    fieldMap.put("field", error.getField());
-                    fieldMap.put("defaultMessage", error.getDefaultMessage());
-                    return fieldMap;
-                }).collect(Collectors.toList());
+                .map((error) -> Map.of(
+                        "field", error.getField(),
+                        "defaultMessage", error.getDefaultMessage()))
+                .toList();
 
         MyProblemDetail problemDetail = MyProblemDetail.forStatusAndDetailAndType(
                 HttpStatus.BAD_REQUEST,
@@ -83,9 +82,23 @@ public class GlobalExceptionHandler {
         return ResponseEntity.badRequest().body(problemDetail);
     }
 
+    // Path の型違いエラー (400)
+    @ExceptionHandler(MethodArgumentTypeMismatchException.class)
+    public ResponseEntity<MyProblemDetail> handleMethodArgumentMismatchException(MethodArgumentTypeMismatchException ex,
+            WebRequest request) {
+        String detail = ex.getMessage();
+        MyProblemDetail problemDetail = MyProblemDetail.forStatusAndDetailAndType(
+                HttpStatus.BAD_REQUEST,
+                detail,
+                URI.create("about:blank"),
+                URI.create(request.getDescription(false).substring(4)));
+
+        return ResponseEntity.badRequest().body(problemDetail);
+    }
+
     // URI Not Found (404)
-    @ExceptionHandler(NoHandlerFoundException.class)
-    public ResponseEntity<MyProblemDetail> handleNoHandlerFoundException(NoHandlerFoundException ex,
+    @ExceptionHandler(NoResourceFoundException.class)
+    public ResponseEntity<MyProblemDetail> handleNoResourceFoundException(NoResourceFoundException ex,
             WebRequest request) {
         String detail = ex.getMessage();
         MyProblemDetail problemDetail = MyProblemDetail.forStatusAndDetailAndType(
@@ -129,20 +142,19 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(DataIntegrityViolationException.class)
     public ResponseEntity<MyProblemDetail> handleDataIntegrityViolationException(DataIntegrityViolationException ex,
             WebRequest request) {
-        List<String> errorDetails = new ArrayList<>();
+        List<Map<String, String>> errorDetails = new ArrayList<>();
         String errorMessage = ex.getMostSpecificCause().toString();
-
-        if (errorMessage.contains("Unique index or primary key violation")) {
-            errorDetails.add("同じ商品名は登録できません");
-        } else {
-            errorDetails.add(errorMessage);
-        }
 
         MyProblemDetail problemDetail = MyProblemDetail.forStatusAndDetailAndType(
                 HttpStatus.CONFLICT,
                 errorMessage,
                 URI.create("about:blank"),
                 URI.create(request.getDescription(false).substring(4)));
+
+        if (errorMessage.contains("Unique index or primary key violation")) {
+            errorDetails.add(Map.of("errorMessage", "同じ商品名は登録できません"));
+            problemDetail.setErrors(errorDetails);
+        }
 
         return ResponseEntity.status(HttpStatus.CONFLICT).body(problemDetail);
     }
@@ -156,6 +168,8 @@ public class GlobalExceptionHandler {
                 detail,
                 URI.create("about:blank"),
                 URI.create(request.getDescription(false).substring(4)));
+
+        problemDetail.setProperty("exceptionName", ex.getClass());
 
         return ResponseEntity.internalServerError().body(problemDetail);
     }
